asg/security-group.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description:  This template creates the necessary Security Gorups within the selected VPC.

Parameters:
  VPCID:
    Description: Name of an existing VPC
    Type: AWS::EC2::VPC::Id
  VpcCidrBlock:
    Description: CIDR block of the VPC
    Type: String
    AllowedPattern: .+

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Default Bitrise Cloud Controller security group
      VpcId: !Ref VPCID
      Tags: 
        - Key: managed-by-bitrise
          Value: "true"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: 
            Fn::GetAtt:
              - LoadBalancerSecurityGroup
              - GroupId
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Default Bitrise Cloud Controller LoadBalancer security group
      VpcId: !Ref VPCID
      Tags: 
        - Key: managed-by-bitrise
          Value: "true"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref VpcCidrBlock
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
Outputs:
  InstanceSg:
    Description: A reference to the Intance Security Group
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: bitriseInstanceSecurityGroup
  InstanceSgGroupId:
    Description: A reference to the Intance Security Group GroupId
    Value:
      Fn::GetAtt:
        - InstanceSecurityGroup
        - GroupId
    Export:
      Name: bitriseInstanceSGGroupId
  LoadBalancerSecurityGroup:
    Description: A reference to the Load Balancer Security Group
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: bitriseLoadBalancerSecurityGroup
